config(pom): can build an executable jar